# itgmania

./: .gitmodules  .gitpod.yml  CMakeLists.txt
.github/workflows/: ci.yml
CMake/: FixExports.cmake  SMSDK.cmake
CMake/Modules/: SMSDK.cmake
Plugins/: CMakeLists.txt
Plugins/Modules/: CMakeRC.cmake
Plugins/SDK/: SMSDK.cmake
Themes/_fallback/: metrics.ini
Themes/_fallback/Languages/: en.ini
src/: AnnouncerManager.h  Bookkeeper.h  CMakeData-arch.cmake  CMakeData-rage.cmake  CMakeData-screen.cmake  CMakeData-singletons.cmake  CMakeLists.txt  CMakeProject-itgtools.cmake  CharacterManager.h  CryptManager.h  FontManager.h  GameLoop.cpp  GameManager.h  GameSoundManager.h  GameState.h  ImageCache.h  InputFilter.h  InputMapper.h  InputQueue.h  LightsManager.h  LuaManager.h  Makefile  MemoryCardManager.h  MessageManager.h  NetworkManager.h  NoteDataUtil.cpp  NoteDataUtil.h  NoteSkinManager.h  NotesLoaderJson.cpp  NotesWriterJson.cpp  PluginManager.cpp  PluginManager.h  ProfileManager.h  RageFileDriverCmrc.cpp  RageFileDriverCmrc.h  RageInput.h  RageLog.cpp  RageLog.h  RageSoundManager.h  RageTimer.h  (+16 more)
src/arch/: arch_default.h
src/arch/ArchHooks/: ArchHooks_Win32Static.cpp
src/arch/Plugin/: LoadedPlugin.cpp  LoadedPlugin.h  PluginBase.h  PluginDriver.h  PluginDriver_Linux.cpp  PluginDriver_Win32.cpp
src/archutils/Darwin/: arch_setup.h
src/archutils/Win32/: arch_setup.h
src/itgtools/: CliMain.cpp  CommandChart.cpp  CommandChart.h  Proxies.cpp
